*Rails 3.1.0 (unreleased)*

* Deprecated support for passing hashes and relations to 'default_scope'. Please create a class
  method for your scope instead. For example, change this:

    class Post < ActiveRecord::Base
      default_scope where(:published => true)
    end

    To this:

    class Post < ActiveRecord::Base
      def self.default_scope
        where(:published => true)
      end
    end

  Rationale: It will make the implementation simpler because we can simply use inheritance to
  handle inheritance scenarios, rather than trying to make up our own rules about what should
  happen when you call default_scope multiple times or in subclasses.

  [Jon Leighton]

* PostgreSQL adapter only supports PostgreSQL version 8.2 and higher.

* ConnectionManagement middleware is changed to clean up the connection pool
  after the rack body has been flushed.

* Added an update_column method on ActiveRecord. This new method updates a given attribute on an object, skipping validations and callbacks.
  It is recommended to use #update_attribute unless you are sure you do not want to execute any callback, including the modification of
  the updated_at column. It should not be called on new records.
  Example:

    User.first.update_column(:name, "sebastian")         # => true

  [Sebastian Martinez]

* Associations with a :through option can now use *any* association as the
  through or source association, including other associations which have a
  :through option and has_and_belongs_to_many associations

  [Jon Leighton]

* The configuration for the current database connection is now accessible via
  ActiveRecord::Base.connection_config. [fxn]

* limits and offsets are removed from COUNT queries unless both are supplied.
  For example:

    People.limit(1).count           # => 'SELECT COUNT(*) FROM people'
    People.offset(1).count          # => 'SELECT COUNT(*) FROM people'
    People.limit(1).offset(1).count # => 'SELECT COUNT(*) FROM people LIMIT 1 OFFSET 1'
