@@ -35,7 +35,13 @@ module ActiveRecord
         if options
           scoped.apply_finder_options(options)
         else
-          (current_scope || relation).clone
+          if current_scope
+            current_scope.clone
+          else
+            scope = relation.clone
+            scope.default_scoped = true
+            scope
+          end
         end
       end
 
